--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wildfire-tracker",
+  "homepage": "http://www.jede.cc/projects/wildfire-volcano-tracker/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
