Corrected img192 error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wildfire-tracker",
-  "homepage": "http://www.jede.cc/projects/wildfire-volcano-tracker/",
+  "homepage": "http://www.jonedens.com/projects/wildfire-volcano-tracker/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
